--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
-user www-data;
-worker_processes 4;
+user nginx;
+worker_processes 2;
 pid /var/run/nginx.pid;
 
 events {
-	worker_connections 768;
+	worker_connections 256;
 	# multi_accept on;
 }
 
@@ -41,7 +41,5 @@ http {
 	##
 
 	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	# include /etc/nginx/sites-enabled/*;
 }
-
-
