--- a/td-agent.conf
+++ b/td-agent.conf
@@ -1,6 +1,6 @@
 # collecting nginx access log 
 <source>
-  type tail
+  @type tail
   format apache
   path /var/log/nginx/access.log
   tag nginx.access
@@ -9,11 +9,11 @@
 
 # forwarding to bigquery plugin
 <match nginx.access>
-  type bigquery
+  @type bigquery
   auth_method compute_engine
 
   project "#{ENV['GCP_PROJECT']}"
-  dataset bq_test
+  dataset gke_nginx
   tables access_log
 
   time_format %s
